[tool.poetry]
name = "keepmeup"
version = "2.0.0"
description = "Keep windows away from sleeping"
authors = ["Michael Tai Wai Ho","Milton Chow"]
readme = "README.md"
packages = [{include = "keepmeup"}]

[tool.poetry.dependencies]
python = "^3.12"
pyautogui = "^0.9.54"
datetime = "^5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
keepmeup = "keepmeup.main:main"